# aether

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  aether.h  aether_explanation.md  build.rs  check_column.py  check_mistral.rs  inspect_specific_tensors.py  magic-context.jsonc  pyproject.toml  test_ffi
.github/workflows/: ci.yml
benches/: aether_bench.rs  attention.rs  bench_main.rs  compiler.rs  constrained.rs  graph_build.rs  matmul.rs  memory_validate.rs  mixed_precision.rs  profile.rs  quant_matmul.rs  runner.rs
deploy/: .env.example  DEPLOY.md  aether-server.service  com.aether.server.plist  smoke_test.sh
docs/: ONBOARDING.md
examples/: analyze_q4k.rs  bench_q5k.rs  bench_q6k.rs  benchmark.rs  broadcast_fusion.rs  debug_gguf_meta.rs  debug_gguf_offsets.rs  debug_layer.rs  debug_q4k.rs  fusion_benchmark.rs  generate.rs  gpu_matmul.rs  inspect_gguf.rs  matmul.rs  memory_tiering.rs  real_gguf_orchestrator.rs  real_model.rs
scripts/: smoke_test.sh
src/: blas.rs  c_api.rs  correctness.rs  gradcheck.rs  graph.rs  lib.rs  mixed_precision.rs  nn.rs  optimizer.rs  parallel.rs  python.rs  runtime.rs  serialization.rs  tensor.rs  trace.rs
src/backend/: cpu.rs  cuda.rs  mod.rs
src/backend/wgpu_backend/: mod.rs  wgsl_shaders.rs
src/codegen/: ast.rs  cache.rs  mod.rs
src/compiler/: constant_fold.rs  cse.rs  dce.rs  mod.rs  simplify.rs
src/inference/: arch_registry.rs  kv_cache.rs  layer_cache.rs  mod.rs  model_loader.rs  runner.rs  telemetry.rs
src/loader/: dequant.rs  gguf.rs  mod.rs
src/memory/: liveness.rs  mod.rs  planner.rs  prefetch.rs  registry.rs
src/quant/: avx2.rs  mod.rs
src/quant/matmul/: avx2_dispatch.rs  common.rs  dispatch.rs  f16.rs  mod.rs  neon.rs  q2_k.rs  q3_k.rs  q4_k.rs  q5_k.rs  q6_k.rs  q8_0.rs  registry.rs  tests.rs
src/scheduler/: fusion.rs  memory_aware.rs  mod.rs  prefetch_overlap.rs
src/tokenizer/: mod.rs
tests/: correctness.proptest-regressions  correctness.rs  e2e.rs  gguf_loader.rs  synthetic_e2e.rs
tools/: dequantize_q4_k_python.py  inspect_gguf_targeted.py  inspect_nans.py  list_gguf_tensors.py  setup-gpu-runner.sh  test_ffi.c  test_q6k_layout.py
